--- a/podcast.html
+++ b/podcast.html
@@ -25,7 +25,7 @@
         <br>
         <br>
         <div class="hero">
-            <img src="images/cover.png">
+            <img src="images/cover.png" class="hero-img">
             <div class="hero-info">
                 <div class="episode-title">
                     <div class="number-container">
